--- a/oranizer/src/app/organizer/organizer.component.html
+++ b/oranizer/src/app/organizer/organizer.component.html
@@ -1,23 +1,26 @@
 <section>
   <header>
     Organiser:<strong>{{ dateService.date | async| moment:'ddd DD'}}</strong>
-  <hr>
+    <hr>
   </header>
   <main>
-    <ul>
-      <li class="task">
-          <span>
-              <strong>1</strong>
-              dfhgrdh
-          </span>
-          <button class="btn btn-primary">Remove</button>
+    <ul *ngIf="tasks.length; else noTasks">
+      <li class="task" *ngFor="let task of tasks; let i = index">
+        <span>
+          <strong>{{i + 1}}</strong>
+          {{task.title}}
+        </span>
+        <button class="btn btn-primary" (click)="remove(task)">Remove</button>
       </li>
     </ul>
+    <ng-template #noTasks>
+      <p class="text-center">No tasks yet ...</p>
+    </ng-template>
   </main>
   <footer>
-    <form>
-      <input type="text">
-      <button type="submit" class="btn btn-primary btn btn-block"> Add</button>
+    <form (ngSubmit)="submit()" [formGroup]="form">
+      <input type="text" formControlName="title">
+      <button type="submit" class="btn btn-primary btn btn-block" [disabled]="form.invalid"> Add</button>
     </form>
   </footer>
 </section>
